--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,18 @@
   "categories": ["education", "productivity"],
   "icons": [
     {
+      "src": "./icons/icon-192x192.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "./icons/icon-512x512.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    },
+    {
       "src": "./icons/icon-57x57.svg",
       "sizes": "57x57",
       "type": "image/svg+xml",
@@ -80,20 +92,8 @@
       "purpose": "any"
     },
     {
-      "src": "./icons/icon-192x192.svg",
-      "sizes": "192x192",
-      "type": "image/svg+xml",
-      "purpose": "any"
-    },
-    {
       "src": "./icons/icon-384x384.svg",
       "sizes": "384x384",
-      "type": "image/svg+xml",
-      "purpose": "any"
-    },
-    {
-      "src": "./icons/icon-512x512.svg",
-      "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "any"
     }
