--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,14 @@
   "scope": "./",
   "lang": "ru",
   "categories": ["education", "productivity"],
+  "screenshots": [
+    {
+      "src": "./icons/icon-512x512.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "form_factor": "wide"
+    }
+  ],
   "icons": [
     {
       "src": "./icons/icon-192x192.svg",
